[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
anyhow = "1.0.53"
arrayvec = "0.7.2"
clap = "3.0.14"
env_logger = "0.9.0"
log = "0.4.14"
retain_mut = "0.1.6"
